--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -232,7 +232,7 @@ jobs:
     - name: Install Dart
       uses: dart-lang/setup-dart@v1
       with:
-        sdk: 3.7.0
+        sdk: 3.9.0-105.0.dev
 
     - name: Test Dart
       run: cargo make test-dart
